# amiga-app-template-kivy

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  create_app.sh  entry.sh  main.py  main_screen.py  manifest.json  map_view.py  path_screen.py  pyproject.toml  setup.cfg  setup.cfg.md5sum  sync.sh  template.py  utils.py
.github/workflows/: ci.yml  format.yml
apps/virtual_joystick/: entry.sh  main.py  requirements.txt  virtual_joystick_explained.md
helpers/: bootstrap.sh
libs/amiga_package/: __init__.py
libs/amiga_pkg/: math.py
src/: main.py
src/res/: main.kv
test/: test_dummy.py
{{cookiecutter.package_name}}/: bootstrap.sh  entry.sh  main.py  pyproject.toml  setup.cfg  sync.sh
{{cookiecutter.project_slug}}/apps/{{cookiecutter.package_name}}/: entry.sh  main.py  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/helpers/: bootstrap.sh
