# As per https://github.com/pypa/setuptools/blob/main/docs/userguide/quickstart.rst
[build-system]
requires = [
    "kivy",
    "setuptools>=42",
    "amiga-brain-api @ git+https://github.com/farm-ng/amiga-brain-api@canbus-packet"
]


build-backend = "setuptools.build_meta"


[options.extras_require]
dev = [
    "black",
]


# [tool.distutils.bdist_wheel]
# universal = true
