# As per https://github.com/pypa/setuptools/blob/main/docs/userguide/quickstart.rst
[build-system]
requires = [
    "certifi==2022.9.24",
    "charset-normalizer==2.1.1",
    "docutils==0.19",
    "grpcio==1.50.0",
    "kivy==2.1.0",
    "Kivy-Garden==0.1.5",
    "protobuf==4.21.9",
    "pygments==2.13.0",
    "requests==2.28.1",
    "setuptools==65.5.0",
    "urllib3==1.26.12",
    "wheel==0.37.1",
    "farm-ng-amiga @ git+https://github.com/farm-ng/amiga-brain-api@main",
]


build-backend = "setuptools.build_meta"


[options.extras_require]
dev = [
    "black",
]


#[tool.distutils.bdist_wheel]
#universal = true
