[metadata]
name = {{ cookiecutter.package_name }}


[options]
install_requires =
    wheel==0.37.1
    farm-ng-amiga @ git+https://github.com/farm-ng/amiga-brain-api@main
package_dir =
    = apps
packages = find:
python_requires = >=3.8.10
setup_requires =
    wheel==0.37.1
    farm-ng-amiga @ git+https://github.com/farm-ng/amiga-brain-api@main


[options.packages.find]
where = apps
